resources/frontend/sass/themes/_header.scss
.site-header {
  display: none;

  @include media-over(xl) {
    display: block;
    width: 100%;
    height: 8rem;
    position: fixed;
    z-index: 999;

    background-color: palette("black");
    color: palette("white");
  }
}

.site-logo {
  z-index: 3;

  &,
  img {
    height: 10rem;
    width: 12.5rem;
    @media(max-width: 767px) {
      height: 60px;
      width: auto;
      margin-top: -11px;
    }
  }
}

.mobile-header {
  position: fixed;
  display: flex;
  align-items: center;
  top: 0;
  left: 0;
  padding: 0 10px;
  height: 60px;
  width: 100%;
  background-color: palette("black");
  z-index: 500;

  @include media-over(xl) {
    display: none;
  }

  .mobile-menu-trigger {
    position: absolute;
    top: 50%;
    margin-top: -3rem;
    right: 0;
    outline: none;

    .hamburger-inner,
    .hamburger-inner::after,
    .hamburger-inner::before {
      width: 25px;
      height: 3px;
      border-radius: 5px;
    }

    &.hamburger--slider.is-active .hamburger-inner:after {
      transform: translate3d(0, -8px, 0) rotate(-90deg);
    }

    .hamburger-inner {

      &::after {
        top: 8px;
      }

      &::before {
        top: 16px;
      }
    }
  }

  .site-logo {
    margin-right: auto;
    margin-top: 2rem;
  }
}

.search-form {
  display: none;
  position: fixed;
  top: 80px;
  left: 0;
  height: 4rem;
  width: 100%;
  z-index: 2;

  background-color: palette("black");

  &.active {
      display: block;
  }
}

.mobile-nav {
  position: fixed;
  top: 60px;
  right: 0;
  height: 100vh;
  max-width: 32rem;
  width: 100%;
  transition: transform 0.3s linear;
  transform: translateX(100%);
  z-index: 500;

  background-color: palette("white");

  @include media-over(xl) {
    display: none;
  }

  &.active {
    transform: translateX(0);
  }

  ul {
    padding: 2rem;
    margin: 0;
    list-style: none;
  }

  li {
    position: relative;
    margin-bottom: 2.5rem;
  }

  .search {
    position: relative;
  }

  a {
    font-family: $title-font-family;
    color: palette("black");
  }

  .has-sub-menu {
    @include chevron(1.2rem, 2px, palette("black"), right, absolute);
    &::before {
      margin-top: -0.6rem;
      top: 50%;
      right: 0;
    }
  }

  .separator {
    height: 1px;
    width: 100%;
    background-color: palette("white");
  }

  .menu {

    &__auth {
      width: 100%;
      position: absolute;
      left: 0;
      bottom: 3.5rem;

      a {
        height: 50px;
        display: flex !important;
        color: palette("white");
      }
    }

    a {
      display: block;
      width: 100%;
    }

    .btn-crimson {
      color: palette("white");
    }
  }

  .drilldown-back {
    @include chevron(1.2rem, 2px, palette("black"), left, absolute);
    &::before {
      margin-top: -0.6rem;
      top: 50%;
      left: 0;
    }
  }

  .sub-menu li {
    padding-left: 2rem;
  }

  a {
    font-size: 2rem;
    font-weight: 500;
    text-transform: uppercase;

    &:hover {
      text-decoration: none;
    }
  }

  .drilldown {
    overflow: hidden;
  }

  .drilldown-sub {
    display: none;
  }
}
.hamburger-box {
  top: 3px;
}
.hamburger--slider {
  position: absolute;
  right: 16px;
  top: 0;
  z-index: 10;
}

.hidden {
  display: none !important;
}
.user-info {
  display: flex;
  margin-right: 50px;
  &--nomargin {
    margin-right: 0;
  }
  &__hello {
    align-self: center;
    color: #fff;
    margin-right: 10px;
  }
  &__avatar {
    width: 32px;
    height: 32px;
    object-fit: cover;
    border-radius: 50%;
    border: 2px solid #eaeaea;
  }
  &__name,
  &__point {
    display: block;
  }
  &__name {
    color: #fff;
    font-size: 16px;
  }
  &__point {
    color: lightcoral;
    font-size: 14px;
  }
  &__left {
    width: 32px;
    margin-right: 15px;
    img {
      width: 32px;
      height: auto;
    }
  }
}

